// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gPuWHK FormField__FormFieldBox-sc-m9hood-0 bNDIlh"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fAcOfV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 flvCAa"
          disabled=""
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gPuWHK FormField__FormFieldBox-sc-m9hood-0 bNDIlh"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fFeUPF FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dgdrjz"
          placeholder="Please write a story"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gPuWHK FormField__FormFieldBox-sc-m9hood-0 bNDIlh"
    >
      <span
        class="StyledText-sc-1sadyjn-0 fqoiau"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fFeUPF FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dgdrjz"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gPuWHK FormField__FormFieldBox-sc-m9hood-0 bNDIlh"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eqjVSW"
        for="some-text"
      >
        A helpful area of text
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fFeUPF FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dgdrjz"
          id="some-text"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gPuWHK FormField__FormFieldBox-sc-m9hood-0 bNDIlh"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dXaGkl FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dgdrjz"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kVwhZo"
      >
        There is something very wrong!
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gPuWHK FormField__FormFieldBox-sc-m9hood-0 bNDIlh"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fFeUPF FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 dgdrjz"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 heWbGB"
      >
        Some useful information
      </span>
    </div>
  </div>
</div>
`;
